<resources>
    <string name="app_name">Bitcoin Market Price</string>
    <string name="bitcoin_value">%s $</string>
    <string name="year">Year</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="you_are_not_connected_to_the_internet">You are not connected to the internet</string>
    <string name="retry">RETRY</string>
    <string name="chart_label">Market Price (USD)</string>
</resources>
