<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainScreen.MainActivity">

    <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:id="@+id/lineChart"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="@dimen/triple_margin"
            app:layout_constraintTop_toBottomOf="@+id/btMonth"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/week"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btWeek"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btMonth"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/triple_margin"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/month"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btMonth"
            app:layout_constraintStart_toEndOf="@+id/btWeek"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btYear"
            app:layout_constraintBottom_toBottomOf="@+id/btWeek"
            app:layout_constraintTop_toTopOf="@+id/btWeek"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/year"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btYear"
            app:layout_constraintStart_toEndOf="@+id/btMonth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btMonth"
            app:layout_constraintTop_toTopOf="@+id/btMonth"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin"/>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/mainContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="btWeek,btMonth,btYear,lineChart"/>

    <TextView
            android:text="@string/you_are_not_connected_to_the_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNoConnection"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/btRetry"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="@dimen/double_margin"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btRetry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/tvNoConnection"
            app:layout_constraintHorizontal_bias="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>